First feature is implemented!

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -24,10 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:layout_marginBottom="16dp"
         android:background="#ffffff"
-        android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
+        android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
         android:drawableTint="@color/gradient_start_colour"
         android:text="next"
         android:textColor="@color/gradient_start_colour"
@@ -40,13 +39,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_next"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:tabBackground="@drawable/indicator">
+        app:tabBackground="@drawable/indicator"
+        app:tabIndicatorColor="@android:color/white">
 
     </com.google.android.material.tabs.TabLayout>
 
