--- a/app/src/main/res/drawable/indicator_default.xml
+++ b/app/src/main/res/drawable/indicator_default.xml
@@ -4,10 +4,10 @@
 <item>
     <shape android:shape="ring"
         android:innerRadius="0dp"
-        android:thickness="4dp"
+        android:thickness="5dp"
         android:useLevel="false">
 
-        <solid android:color="@color/tab_indicator_gray"/>
+        <solid android:color="#70C0C0C0"/>
     </shape>
 
 </item>
