--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,9 +4,9 @@
 
     <item
         android:id="@+id/map"
-        android:title="@string/place"
+        android:title="@string/search"
         app:showAsAction="never"
-        android:icon="@drawable/store_icon"/>
+        android:icon="@drawable/ic_box"/>
     <item
         android:id="@+id/item2"
         android:title="@string/buy"
@@ -14,9 +14,9 @@
         android:icon="@drawable/buy_icon"/>
     <item
         android:id="@+id/item3"
-        android:title="@string/sell"
+        android:title="@string/repair"
         app:showAsAction="never"
-        android:icon="@drawable/sell"/>
+        android:icon="@drawable/ic_tools"/>
     <item
         android:id="@+id/profile"
         android:title="@string/user"
